# ORION

./: .gitignore  CMakeLists.txt  compile.sh  git_test.sh
docs/: README.md
src/: CMakeLists.txt  benchmark.cpp  main.cpp
src/backend/cpu/: BackendCPU.cpp
src/bc/: BCData.hpp  BCDistributor.cpp  BCDistributor.hpp  BCPreprocess.cpp  BCPreprocess.hpp  BCReader.cpp  BCReader.hpp  PhysicalBC.cpp  PhysicalBC.hpp
src/core/: OrionArray.hpp  OrionSolver.cpp  OrionSolver.hpp  Params.cpp  Params.hpp  Runtime.cpp  Runtime.hpp
src/mesh/: GridDistributor.cpp  GridDistributor.hpp  MetricComputer.cpp  MetricComputer.hpp  MultiBlockGrid.hpp  Plot3DReader.cpp  Plot3DReader.hpp
src/postprocess/: PostProcess.cpp  PostProcess.hpp
src/preprocess/: DebugDump.cpp  DebugDump.hpp  FlowField.cpp  FlowField.hpp  Inflow.cpp  Inflow.hpp  InitialCondition.cpp  InitialCondition.hpp
src/solver/: FluxComputer.cpp  FluxComputer.hpp  HaloExchanger.cpp  HaloExchanger.hpp  InviscidFluxComputer.cpp  InviscidFluxComputer.hpp  ResidualMonitor.cpp  ResidualMonitor.hpp  StateUpdater.cpp  StateUpdater.hpp  TimeIntegrator.cpp  TimeIntegrator.hpp
testcases/NS/: run.sh
testcases/NS/output/: _000001.vtm  _000001_block_0.vts  _000001_block_1.vts  _000001_block_10.vts  _000001_block_11.vts  _000001_block_12.vts  _000001_block_13.vts  _000001_block_14.vts  _000001_block_15.vts  _000001_block_16.vts  _000001_block_17.vts  _000001_block_18.vts  _000001_block_19.vts  _000001_block_2.vts  _000001_block_20.vts  _000001_block_21.vts  _000001_block_22.vts  _000001_block_23.vts  _000001_block_24.vts  _000001_block_25.vts  _000001_block_26.vts  _000001_block_27.vts  _000001_block_28.vts  _000001_block_29.vts  _000001_block_3.vts  _000001_block_30.vts  _000001_block_31.vts  _000001_block_32.vts  _000001_block_33.vts  _000001_block_34.vts  _000001_block_35.vts  _000001_block_36.vts  _000001_block_37.vts  _000001_block_38.vts  _000001_block_39.vts  _000001_block_4.vts  _000001_block_40.vts  _000001_block_41.vts  _000001_block_42.vts  _000001_block_43.vts  (+155 more)
